# technomancy

./: .gitignore  CMakeLists.txt  README.md  dwim.sh  hello.tsc  make-unix64.sh
agm/: CMakeLists.txt
agm/inc/aggiornamento/: aggiornamento.h  cmd_line.h  container.h  log.h  master.h  opengl.h  semaphore.h  string.h  thread.h  window.h
agm/inc/aggiornamento/platform/: unix.h  windows.h
agm/src/: aggiornamento.cc  cmd_line.cc  container.cc  log.cc  master.cc  opengl.cc  semaphore.cc  string.cc  thread.cc  window.cc
agm/tests/: cmd_line_test.cc
challenge/: CMakeLists.txt
challenge/src/: main.cc
clunc/: CMakeLists.txt  notes.txt
clunc/ansi-c/: c99.y
clunc/data/: clunc.peg  hello.clunc  main.clunc
clunc/src/: clunc.cc  clunc.h  clunc.l  clunc.y  main.cc
cmake/platform/: unix64.txt  win64.txt
cmake/scripts/: preamble.txt
common/: CMakeLists.txt
common/inc/common/: png.h  sphere.h
common/src/: png.cc  simple_window.cc  sphere.cc
helloworld/: CMakeLists.txt
helloworld/src/: main.cc
jupiter/: CMakeLists.txt
jupiter/src/: main.cc  main.h  render.cc  render.h  window.cc  window.h
lightbulb/: CMakeLists.txt
lightbulb/src/: main.cc
mnist/: CMakeLists.txt
mnist/src/: main.cc
moon/: CMakeLists.txt
moon/src/: dump.cc  dump.h  image.cc  image.h  main.cc
peg/: CMakeLists.txt
peg/src/: main.cc  peglib.h
pickleball/: CMakeLists.txt
pickleball/data/: 2023-08-24-5173-0564-0588.hpp  2023-08-24-5173-0806-0829.hpp  2023-08-24-5173-0816.hpp  2024-05-05-5422-0289-0316.hpp  2024-05-05-5422-0289.hpp  2024-07-29.hpp
pickleball/scripts/: analyze.sh  diff.sh
pickleball/src/: main.cc  words.txt
pluto/: CMakeLists.txt
pluto/src/: main.cc  main.h
polar2cube/: CMakeLists.txt
polar2cube/src/: main.cc  png.cc
prisoner/: CMakeLists.txt
prisoner/src/: main.cc
rubiks/: CMakeLists.txt
rubiks/src/: main.cc  main.h  render.cc  render.h  window.cc  window.h
spheregen/: CMakeLists.txt
spheregen/src/: main.cc
stereogram/: CMakeLists.txt
stereogram/src/: main.cc  main.h  render.cc  render.h  window.cc  window.h
sudoku/: CMakeLists.txt
sudoku/src/: main.cc
voting/: CMakeLists.txt  notes.txt  voting-game.txt
voting/src/: burlington.cc  burlington_2006.cc  burlington_2009.cc  data.cc  data.h  electorate.cc  electorate.h  fixed.cc  fixed.h  generated.cc  generated.h  guthrie.cc  guthrie.h  main.cc  minneapolis_park_1.cc  minneapolis_park_3.cc  minneapolis_park_5.cc  minneapolis_park_6.cc  minneapolis_ward_1.cc  minneapolis_ward_10.cc  minneapolis_ward_11.cc  minneapolis_ward_12.cc  minneapolis_ward_3.cc  minneapolis_ward_4.cc  minneapolis_ward_5.cc  minneapolis_ward_6.cc  minneapolis_ward_7.cc  minneapolis_ward_8.cc  minneapolis_ward_9.cc  random.cc  random.h  synthetic_1.cc  synthetic_2.cc  synthetic_3.cc
world/: CMakeLists.txt
world/src/: main.cc  main.h  render.cc  render.h  window.cc  window.h
